The username paramter UserDetailService is just a convention thet it follows it considers that whatever we give it should be used as identifier for users and by default it is username. but we cane ofc change it to may be an Long Id beacuse in real world applications you definitely don't use username to indentify. ****you configure your queries for JdbcUserDetailsManager to fecth the ID,password,enabled and also id,authority** and now you are good to pass base64(id:password) instead of (username:password).

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,10 @@ spring:
     url: jdbc:mysql://localhost:3306/spring
     username: root
     password: root
+ 
+logging:
+  level:
+   org:
+    springframework:
+      secuirty: DEBUG
+    
